<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.WellnessActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/wellness" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="match_parent"
                        android:layout_height="40dp" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"
                        android:text="@string/sleep"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"
                        android:text="@string/energy"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"
                        android:text="@string/soreness"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"
                        android:text="@string/mood"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"
                        android:text="@string/stress"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView22"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0.2"
                            android:text="@string/score_1"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView23"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:text="@string/score_2"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView24"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:text="@string/score_3"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView25"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:text="@string/score_4"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView26"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:text="@string/score_5"
                            android:textAlignment="center" />
                    </LinearLayout>

                    <RadioGroup
                        android:id="@+id/sleepRadioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/sleep0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2" />

                        <RadioButton
                            android:id="@+id/sleep1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2" />

                        <RadioButton
                            android:id="@+id/sleep2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2" />

                        <RadioButton
                            android:id="@+id/sleep3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2" />

                        <RadioButton
                            android:id="@+id/sleep4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2" />
                    </RadioGroup>

                    <RadioGroup
                        android:id="@+id/energyRadioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/energy0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2" />

                        <RadioButton
                            android:id="@+id/energy1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2" />

                        <RadioButton
                            android:id="@+id/energy2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:checked="false" />

                        <RadioButton
                            android:id="@+id/energy3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2" />

                        <RadioButton
                            android:id="@+id/energy4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2" />
                    </RadioGroup>

                    <RadioGroup
                        android:id="@+id/sorenessRadioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/soreness0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2" />

                        <RadioButton
                            android:id="@+id/soreness1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2" />

                        <RadioButton
                            android:id="@+id/soreness2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:checked="false" />

                        <RadioButton
                            android:id="@+id/soreness3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2" />

                        <RadioButton
                            android:id="@+id/soreness4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2" />
                    </RadioGroup>

                    <RadioGroup
                        android:id="@+id/moodRadioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/mood0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2" />

                        <RadioButton
                            android:id="@+id/mood1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2" />

                        <RadioButton
                            android:id="@+id/mood2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:checked="false" />

                        <RadioButton
                            android:id="@+id/mood3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2" />

                        <RadioButton
                            android:id="@+id/mood4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2" />
                    </RadioGroup>

                    <RadioGroup
                        android:id="@+id/stressRadioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/stress0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2" />

                        <RadioButton
                            android:id="@+id/stress1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2" />

                        <RadioButton
                            android:id="@+id/stress2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:checked="false" />

                        <RadioButton
                            android:id="@+id/stress3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2" />

                        <RadioButton
                            android:id="@+id/stress4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2" />
                    </RadioGroup>

                </LinearLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/commentEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/wellnessSubmitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/submit" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>